# adotinthevoid.github.io

./: CONTENT.toml  Cargo.toml  Justfile  deploy.sh  index.html  index.xml  style.css
.github/workflows/: CI.yml
content/: new-site.md
posts/: hidden-posts.md  joy-2023.md  malloc.md  metaregex.md  new-site.md  rustdoc-json-2022.md  rustdoc-json-2023.md
posts/2020/05/metaregex-python-can-be-fast-too/: index.html
posts/2022/12/rustdoc-json-in-2022/: index.html
posts/hidden-posts/: index.html
posts/joy-2023/: index.html
posts/metaregex/: index.html
posts/rustdoc-json-2022/: index.html
posts/rustdoc-json-2023/: index.html
src/: config.rs  format_date.rs  highlight.rs  main.rs  markdown.rs  rss_channel.rs
src/markdown/: html.rs  mod.rs
src/templates/: base.html  index.html  post.html  redirect.html
static/: CNAME  style.css
