[package]
name = "alona-page"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
camino = { version = "1.1.4", features = ["serde"] }
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.2.1", features = ["derive"] }
fs-err = "2.9.0"
minijinja = "0.31.0"
serde = { version = "1.0.159", features = ["derive"] }
toml = "0.7.3"
